Fixes from whatsapp

--- a/inc/blocks/contactus/contactus.twig
+++ b/inc/blocks/contactus/contactus.twig
@@ -2,16 +2,15 @@
     <div class="container-fluid">
         <div class="container-xxl links">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6 twolinkco">
                     <a href="mailto:info@minimis.shop">
                         info@minimis.shop
                     </a><br/>
-                    <p>
-                        
-                    {{emailline}}
+                    <p> 
+                        {{emailline}}
                     </p>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6 twolinkco">
                     <a href="tel:+302661024810" class="phone text-right">
                         +30 2661 024810
                     </a><br/>
@@ -71,7 +70,7 @@
                     {% endif %}
                     
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary" id="contact-submit-btn">
+                        <button type="submit" class="btn submitbtn" id="contact-submit-btn">
                             {{ form.placeholders.submit }}
                         </button>
                     </div>
