--- a/views/posts.twig
+++ b/views/posts.twig
@@ -44,12 +44,12 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-6">
+                                        <div class="col-12 col-md-6">
                                             <h3 class="card-title">
                                                 <a href="{{ post.link }}">{{ post.title }}</a>
                                             </h3>
                                         </div>
-                                        <div class="col-6 ">
+                                        <div class="col-12 col-md-6">
                                             <p class="card-text text-end">
                                                 {{ post.date }}
                                             </p>
