--- a/scss/b2b2form.scss
+++ b/scss/b2b2form.scss
@@ -56,7 +56,7 @@
                     display:none;
                 }
 
-                input {
+                input,textarea {
                     width:100%;
                     border: 0px !important;
                     border-bottom: 2px solid #000 !important;
@@ -69,6 +69,9 @@
                     box-shadow: none !important;
 
 
+                }
+                textarea{
+                    border:2px solid #000 !important;
                 }
 
                 input[type="submit"] {
