--- a/scss/contactus.scss
+++ b/scss/contactus.scss
@@ -11,7 +11,7 @@
 
             .row{
 
-                .col-6{
+                .twolinkco{
                    
                     a{
                         font-size: 1.9em !important;
@@ -36,10 +36,23 @@
                             margin-left: 38px;
                             vertical-align: middle;
                         }
+
+                        //small screens
+                        @media (max-width: 768px) {
+                            font-size: 1.4em !important;
+
+                            
+                        }
                     }
                     p{
                         margin-top: 10px;
                         font-size: 1.2em;
+
+                        //small screens
+                        @media (max-width: 768px) {
+                            font-size: 1em;
+                            
+                        }
                     }
                 }
 
@@ -109,6 +122,28 @@
                     &::placeholder{
                         color:#ecececff !important;
                     }
+                }
+
+                .submitbtn{
+                    width: 100% !important;
+                    border-radius: 0 !important;
+                    border:2px solid #000!important;
+                    box-shadow: none !important;
+                    background-color: #000 !important;
+                    font-size: 2.3em !important;
+                    color: #FFF    !important;
+                    margin-top: 2em;
+
+                    //BIG SCREENS
+                    @media (min-width: 768px) {
+                        //make it align to the right
+                        float: right;
+                        width: 180px !important;
+                        font-size: 1.5em !important;
+                    }
+
+
+                    
                 }
 
                 textarea{
