--- a/scss/threecolcont.scss
+++ b/scss/threecolcont.scss
@@ -8,6 +8,11 @@
         margin-bottom: 1rem;
         font-weight: 700;
 
+        //small screens
+        @media (max-width: 768px) {
+            font-size: 3rem;
+        }
+
     }
 
     h3 {
